
==Bug Fixes==

* [#872] numeric gen query with datasize gives errors in condition
* [#914] rule error : could not find name and val separated by an '=' sign in input attribute
* [#890] 806000 error UserGroupAO.find() when id is given as a string

==Features==

 * [#775] iDrop 1.1.0 refactoring activities
 ** clean up deprecated methods and fix visibility so DataTransferOperations is the public API for put/get/copy/move
 
 * [#114] support for mounted collections, cross zone browsing, and soft links
 ** significant refactoring as support added, cleanup of deprecated methods, tightening package visibility
 ** added a MountedCollectionAO to administer mounted collections and soft links 
 ** Refactoring of key classes for support
 **** CollectionAndDataObjectListAndSearchAO
 **** DataObjectAO
 **** DataTransferOperations
 **** CollectionAO
 **** IRODSFile
 **** IRODSInputStream
 **** IRODSOutputStream
 
 *  [#696] Add ticket support
 ** added compareGivenTicketToActualAndUpdateAsNeeded() method to TicketAdminService, which allows for updating an entire ticket, computing deltas and updating fields as appropriate
 ** added support to stream data via an output stream to an iRODS collection with a ticket
 
 *  [#853] IP - add ticket by admin
 ** added ability to create a ticket for another user (given that the creator is rodsAdmin)

 * [#864] 2.5 iRODS protocol errors
 ** update tests for 2.5 backwards compatability
 ** overhead misc operations to normalize errors (especially DuplicateDataException and DataNotFoundException) which are indicated
 by different iRODS error codes in 2.5 and prior.
 
 
 * [#865] factor helper classes into jargon core and remove
 ** this is a general project cleanup and simplification task.  THe testing libraries have been consolidated and placed
 into the jargon-core so that they me used by unit tests in jargon itself, as well as other projects.  This removes jargon-test as a project.
 
 * [#866] Resource Group support